Fix table width issues on mobile.

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -42,8 +42,8 @@ table {
     width: 100%;
 }
 
-th {
-    white-space: nowrap;
+td {
+    word-break: break-word;
 }
 
 th.sorting-th {
@@ -72,10 +72,6 @@ i.fa + span  {
 .track-action {
     padding: 0.3rem 0.6rem;
     font-weight: bold;
-}
-
-tr td:first-child {
-    padding-right: 0rem;
 }
 
 
